--- a/add-event.html
+++ b/add-event.html
@@ -7,11 +7,16 @@
     <title>Add Event Rough</title>
 </head>
 <body>
+    <header></header>
+
+    <title> Add an Event</title>
     <section>
     <h1>Hello, is this working?</h1>
     <h2>New Event</h2>
     <h3>Date</h3>
     <p>Testinggggg</p>
     </section>
+
+    <footer></footer>
 </body>
 </html>
