When will the misery end

--- a/add-event.html
+++ b/add-event.html
@@ -17,6 +17,7 @@
     <p>Testinggggg</p>
     <p>SADGE</p>
     <p>I'm trying to use VSC TO PUSHHHHHHHHHH</p>
+    <p>VSC Doesn't let me PUSH  </p>
     </section>
 
     <footer></footer>
