--- a/add-task.html
+++ b/add-task.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="select-persons.php">Dashboard</a></li>
-                <li><a href="logout.php">logout</a></li>
+                <li><a href="logout.php">Logout</a></li>
             </ul>
         </nav>
     </header>
