--- a/add-task.html
+++ b/add-task.html
@@ -19,6 +19,7 @@
     <!-- NOTES: Feel free to get rid of the header/footer, and change PHP action page. I added <br>'s, but please get rid them, when implementing CSS. -->
 
     <h1>Add New Task</h1>
+    <h1>Edit from Desktop</h1>
 
     <form action="process-task.php" method="POST">
         <label for="task"> Task:</label><br>
