--- a/index.html
+++ b/index.html
@@ -5,14 +5,38 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/initialize.css" />
   <title>Document</title>
+  <link rel="stylesheet" href="css/initialize.css" />
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-  <div style="background-color: pink; width: 100px; height: 100px; padding: 10px">
-    123
-  </div>
+  <main class="bg">
+    <header>
+      <nav>
+        <img src="images/logo.png" alt="logo" id="logo">
+        <ul>
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Groups</a></li>
+        </ul>
+        <div class="username">
+          <span>Hi username!</span>
+          <div class="avatar">R</div>
+        </div>
+      </nav>
+    </header>
+    <aside>
+      <h1>
+        January 1, 2022
+      </h1>
+      <section>
+        <div class="time">
+          00:00
+          <div class="line"></div>
+        </div>
+      </section>
+    </aside>
+  </main>
 </body>
 
 </html>
