--- a/index.html
+++ b/index.html
@@ -31,7 +31,75 @@
       </h1>
       <section>
         <div class="time">
-          00:00
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
+          <div class="line"></div>
+        </div>
+        <div class="time">
+          <span>00:00</span>
           <div class="line"></div>
         </div>
       </section>
