more fine tuning, edit file types and css

--- a/sign-up.html
+++ b/sign-up.html
@@ -11,9 +11,19 @@
     </head>
     <body>
 
-        <fieldset>
+        <header> <!--nav bar-->
+            <nav>
+                <img src="images/logo.png" alt="logo" id="logo">
+                <ul>
+                <li><a href="login.html">Log In</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div id="signup"> <!--sign up form-->
             <p>Welcome to <br>
-            <img src="assets/palendar-logo.png" style="width:200px"/> <br>
+            <img src="images/logo-colour.png" id="clogo"/> <br>
             Sign up below to get started!</p>
             <form method="POST" action="process-sign-up.php">
                 <label>Username</label><br>
@@ -28,8 +38,8 @@
                 <input type="search" name="q" ><br>
                 <input type="submit" value="Sign Up">
             </form>
-            <p>Already have an account? <a href="login.php">Log in</a></p>
-        </fieldset>
+            <p>Already have an account? <a href="login.html" style="color: #9892C7">Log in</a></p>
+        </div>
 
     </body>
 </html>
