--- a/index.html
+++ b/index.html
@@ -99,7 +99,24 @@
           every event and its details at once.
         </article>
         <h3 class="members-title">Members</h3>
-        <div class="members"></div>
+        <div class="members">
+          <div class="members-container">
+            <div class="avatar">R</div>
+            <span>Reynold</span>
+          </div>
+          <div class="members-container">
+            <div class="avatar">D</div>
+            <span>Dylan</span>
+          </div>
+          <div class="members-container">
+            <div class="avatar">A</div>
+            <span>Aly</span>
+          </div>
+          <div class="members-container">
+            <div class="avatar">M</div>
+            <span>Mimi</span>
+          </div>
+        </div>
       </section>
     </section>
   </main>
