--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Palendar</title>
   <link rel="stylesheet" href="css/initialize.css" />
   <link rel="stylesheet" href="css/index.css">
 </head>
@@ -16,8 +16,8 @@
       <nav>
         <img src="images/logo.png" alt="logo" id="logo">
         <ul>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Groups</a></li>
+          <li><a href="index.html">Dashboard</a></li>
+          <li><a href="group.html">Groups</a></li>
         </ul>
         <div class="username">
           <span>Hi username!</span>
