finalize first presentation

--- a/group.html
+++ b/group.html
@@ -22,7 +22,9 @@
                 </ul>
                 <div class="username">
                     <span>Hi username!</span>
-                    <div class="avatar">R</div>
+                    <a href="userProfile.php">
+                        <div class="avatar">R</div>
+                    </a>
                 </div>
             </nav>
         </header>
