--- a/add-task.html
+++ b/add-task.html
@@ -23,7 +23,9 @@
                 </ul>
                 <div class="username">
                     <span>Hi username!</span>
-                    <div class="avatar">R</div>
+                    <a href="userProfile.php">
+                        <div class="avatar">R</div>
+                    </a>
                 </div>
             </nav>
         </header>
