change href to user profile

--- a/group.html
+++ b/group.html
@@ -22,7 +22,7 @@
                 </ul>
                 <div class="username">
                     <span>Hi username!</span>
-                    <a href="userProfile.php">
+                    <a href="userProfile.html">
                         <div class="avatar">R</div>
                     </a>
                 </div>
