--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
         <div class="username">
           <span>Hi username!</span>
-          <a href="userProfile.php">
+          <a href="userProfile.html">
             <div class="avatar">R</div>
           </a>
         </div>
